# mgr

./: MANIFEST  setup.cfg  setup.py
py_mgr/main/: config.yaml
py_mgr_test/: __main__.py
