[metadata]
name = py-mgr
version = 0.0.1
author = Flavio Lionel Rita
author-email = flaviolrita@hotmail.com
summary = administration of modules and plugins 
description-file =
    README.md
home-page = https://github.com/FlavioLionelRita/py-mgr
requires-dist = setuptools
classifier = 
    Development Status :: 5 - Production/Stable
	Environment :: Plugins
	Framework :: Setuptools Plugin
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Archiving :: Packaging
